@@ -345,7 +345,7 @@ class boss_razorscale : public CreatureScript
                 summons.DoAction(MOLE_MACHINE_TRIGGER, ACTION_DESPAWN_ADDS);
                 _Reset();
                 me->SetCanFly(true);
-                me->SetDisableGravity(true);
+                //me->SetDisableGravity(true);
                 me->SetFlag(UNIT_FIELD_FLAGS, UNIT_FLAG_NOT_SELECTABLE);
                 me->SetReactState(REACT_PASSIVE);
                 PermaGround = false;
@@ -361,8 +361,8 @@ class boss_razorscale : public CreatureScript
                     controller->AI()->DoAction(ACTION_HARPOON_BUILD);
                 me->SetSpeed(MOVE_FLIGHT, 3.0f, true);
                 me->SetReactState(REACT_PASSIVE);
-                me->SetCanFly(true);
-                me->SetDisableGravity(true);
+                //me->SetCanFly(true);
+                //me->SetDisableGravity(true);
                 phase = PHASE_GROUND;
                 events.SetPhase(PHASE_GROUND);
                 FlyCount = 0;
