@@ -17,6 +17,7 @@
 
 ~>XX.07.2012:
 
+- Fix Ulduar: Razorscale.
 - Fix Glyph of Totem of Wrath. (Proc the spells that have DEST target when there is no other target info.)
 
 ~>23.07.2012:
